@@ -1,11 +1,13 @@
 package br.com.alura.AluraFake.course;
 
 import br.com.alura.AluraFake.user.*;
+import br.com.alura.AluraFake.util.AppException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
@@ -20,8 +22,12 @@ class CourseControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
+
+    @MockBean private CourseService courseService;
+
     @MockBean
     private UserRepository userRepository;
+
     @MockBean
     private CourseRepository courseRepository;
     @Autowired
@@ -33,7 +39,7 @@ class CourseControllerTest {
         NewCourseDTO newCourseDTO = new NewCourseDTO();
         newCourseDTO.setTitle("Java");
         newCourseDTO.setDescription("Curso de Java");
-        newCourseDTO.setEmailInstructor("paulo@alura.com.br");
+        newCourseDTO.setEmailInstructor("pauloalura.com.br");
 
         doReturn(Optional.empty()).when(userRepository)
                 .findByEmail(newCourseDTO.getEmailInstructor());
@@ -42,8 +48,8 @@ class CourseControllerTest {
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(newCourseDTO)))
                 .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.field").value("emailInstructor"))
-                .andExpect(jsonPath("$.message").isNotEmpty());
+                .andExpect(jsonPath("$[0].field").value("emailInstructor"))
+                .andExpect(jsonPath("$[0].message").isNotEmpty());
     }
 
 
@@ -53,52 +59,57 @@ class CourseControllerTest {
         NewCourseDTO newCourseDTO = new NewCourseDTO();
         newCourseDTO.setTitle("Java");
         newCourseDTO.setDescription("Curso de Java");
-        newCourseDTO.setEmailInstructor("paulo@alura.com.br");
+        newCourseDTO.setEmailInstructor("paulodasd@alura.com.br");
 
-        User user = mock(User.class);
-        doReturn(false).when(user).isInstructor();
-
-        doReturn(Optional.of(user)).when(userRepository)
-                .findByEmail(newCourseDTO.getEmailInstructor());
+        doThrow(new AppException(HttpStatus.BAD_REQUEST, "User is not a instructor"))
+                .when(courseService).createCourse(any(NewCourseDTO.class));
 
         mockMvc.perform(post("/course/new")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(newCourseDTO)))
                 .andExpect(status().isBadRequest())
-                .andExpect(jsonPath("$.field").value("emailInstructor"))
-                .andExpect(jsonPath("$.message").isNotEmpty());
+                .andExpect(jsonPath("$.status").value(400))
+                .andExpect(jsonPath("$.message").value("User is not a instructor"));
     }
+
 
     @Test
     void newCourseDTO__should_return_created_when_new_course_request_is_valid() throws Exception {
-
         NewCourseDTO newCourseDTO = new NewCourseDTO();
         newCourseDTO.setTitle("Java");
         newCourseDTO.setDescription("Curso de Java");
         newCourseDTO.setEmailInstructor("paulo@alura.com.br");
 
-        User user = mock(User.class);
-        doReturn(true).when(user).isInstructor();
+        User user = new User("PAULO", "paulo@alura.com.br", Role.INSTRUCTOR);
 
-        doReturn(Optional.of(user)).when(userRepository).findByEmail(newCourseDTO.getEmailInstructor());
+        Course course = new Course("Java", "Curso de Java", user);
+
+        when(courseService.createCourse(any(NewCourseDTO.class)))
+                .thenReturn(course);
 
         mockMvc.perform(post("/course/new")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(newCourseDTO)))
                 .andExpect(status().isCreated());
 
-        verify(courseRepository, times(1)).save(any(Course.class));
+        verify(courseService, times(1)).createCourse(any(NewCourseDTO.class));
     }
 
     @Test
     void listAllCourses__should_list_all_courses() throws Exception {
-        User paulo = new User("Paulo", "paulo@alua.com.br", Role.INSTRUCTOR);
+        User paulo = new User("Paulo", "paulo@alura.com.br", Role.INSTRUCTOR);
 
         Course java = new Course("Java", "Curso de java", paulo);
         Course hibernate = new Course("Hibernate", "Curso de hibernate", paulo);
         Course spring = new Course("Spring", "Curso de spring", paulo);
 
-        when(courseRepository.findAll()).thenReturn(Arrays.asList(java, hibernate, spring));
+        List<CourseListItemDTO> courseDTOs = List.of(
+                new CourseListItemDTO(java),
+                new CourseListItemDTO(hibernate),
+                new CourseListItemDTO(spring)
+        );
+
+        when(courseService.listAllCourses()).thenReturn(courseDTOs);
 
         mockMvc.perform(get("/course/all")
                         .contentType(MediaType.APPLICATION_JSON))
@@ -109,6 +120,24 @@ class CourseControllerTest {
                 .andExpect(jsonPath("$[1].description").value("Curso de hibernate"))
                 .andExpect(jsonPath("$[2].title").value("Spring"))
                 .andExpect(jsonPath("$[2].description").value("Curso de spring"));
+    }
+
+    @Test
+    void publishCourse__should_publish_course_successfully() throws Exception {
+        Long courseId = 1L;
+
+        User user = new User("Instrutor", "instrutor@alura.com", Role.INSTRUCTOR);
+        Course publishedCourse = new Course("Java", "Curso de Java", user);
+        publishedCourse.setId(courseId);
+        publishedCourse.setStatus(Status.PUBLISHED);
+
+        when(courseService.publishCourse(courseId)).thenReturn(publishedCourse);
+
+        mockMvc.perform(post("/course/{id}/publish", courseId)
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk());
+
+        verify(courseService, times(1)).publishCourse(courseId);
     }
 
 }
